--- a/Alugueis de Carros-MPA/views/loja/loja.ejs
+++ b/Alugueis de Carros-MPA/views/loja/loja.ejs
@@ -17,6 +17,7 @@
                 <li><a href="loja">Loja</a></li>
                 <li><a href="loja/aluguel">Meus Alugueis</a></li>
                 <li><a href="loja/conta">Minha conta</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </header>
@@ -35,7 +36,7 @@
                 <p>Valor: <%= carros[i].valor %></p>
                 <p>Preço da diária: <%= carros[i].precoDiaria %></p>
                 <p>Status: <%= carros[i].status %></p>
-                <a href="/loja/alugar">Alugar</a>
+                <a href="/loja/alugar/<%= carros[i].nome %>">Alugar</a>
             </div>
         <% } %>
     </div>
