--- a/Alugueis de Carros-MPA/views/admin/loja.ejs
+++ b/Alugueis de Carros-MPA/views/admin/loja.ejs
@@ -15,6 +15,7 @@
                 <li><a href="aluguel">admaalugar</a></li>
                 <li><a href="/admin/loja">admloja</a></li>
                 <li><button><a href="add-carro">add carro</a></button></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </header>
