--- a/Alugueis de Carros-MPA/public/style.css
+++ b/Alugueis de Carros-MPA/public/style.css
@@ -1,4 +1,4 @@
-/* Estilos para o cabeçalho */
+
 .header-topo {
   position: fixed;
   top: 0;
@@ -27,14 +27,12 @@
   margin-right: 0;
 }
 
-/* Estilos para a grade de itens */
 .grid-container {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Define 3 colunas com largura igual */
-  grid-gap: 10px; /* Define o espaçamento entre os itens */
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 10px; 
 }
-
 .grid-item {
   background-color: #f1f1f1;
   padding: 20px;
@@ -114,4 +112,44 @@
 
 .form-container p {
   margin-bottom: 10px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+  background-color: #f1f1f1;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.modal-content p {
+  margin-bottom: 10px;
+}
+
+.modal-content button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  box-shadow: none;
+  margin-top: 10px;
+}
+
+.modal-content button:hover {
+  background-color: #2980b9;
 }
