--- a/Alugueis de Carros-MPA/views/index.ejs
+++ b/Alugueis de Carros-MPA/views/index.ejs
@@ -13,8 +13,8 @@
     <header class="header-topo">
         <div class="header-nav">
             <ul>
-                <li><a href="user/signin">Login</a></li>
-                <li><a href="user/signup">Cadastro</a></li>
+                <li><a href="/signin">Login</a></li>
+                <li><a href="/signup">Cadastro</a></li>
             </ul>
         </div>
     </header>
