--- a/Alugueis de Carros-MPA/views/user/signin.ejs
+++ b/Alugueis de Carros-MPA/views/user/signin.ejs
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <form class="form-container" action="/user/signin" method="post">
+    <form class="form-container" action="/signin" method="post">
         <h5>LOGIN USUARIO</h5>
         Email: <input type="email" name="email" required />
         Senha: <input type="password" name="password" required />
