--- a/Alugueis de Carros-MPA/views/user/signup.ejs
+++ b/Alugueis de Carros-MPA/views/user/signup.ejs
@@ -21,7 +21,7 @@
 
 <body>
 
-        <form class="form-container" action="/user/signup" method="post">
+        <form class="form-container" action="/signup" method="post">
             <h5>CADASTRO USUARIO</h5>
             Name: <input type="text" name="name"  required/><br />
             Data de nascimento: <input type="date" name="dataNascimento"  required/><br />
