--- a/Alugueis de Carros-MPA/views/loja/alugar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/alugar.ejs
@@ -41,7 +41,7 @@
                     Pix
                 </label> <br>
 
-                <input type="submit" value="Salvar"> <br>
+                <input type="submit" value="Confirmar reserva"> <br>
             </form>
         </div>
     </div>
