--- a/Alugueis de Carros-MPA/views/admin/add-carro.ejs
+++ b/Alugueis de Carros-MPA/views/admin/add-carro.ejs
@@ -9,6 +9,17 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <header class="header-topo">
+        <div class="header-nav">
+            <ul>
+              <li><a href="aluguel">Alugueis</a></li>
+              <li><a href="/admin/loja">Loja</a></li>
+              <li><a href="/logout">Sair</a></li>
+            </ul>
+        </div>
+    </header>
+
     <form class="form-container" action="/add-carro" method="post">
 
        imagem: <input type="url" name="imagem"> <br>
