--- a/Alugueis de Carros-MPA/views/admin/aluguel.ejs
+++ b/Alugueis de Carros-MPA/views/admin/aluguel.ejs
@@ -12,11 +12,9 @@
     <header class="header-topo">
         <div class="header-nav">
             <ul>
-                <li><a href="user/signin">Login</a></li>
-                <li><a href="user/signup">Cadastro</a></li>
-                <li><a href="admin/add-carro">admaddcarro</a></li>
-                <li><a href="admin/loja">admloja</a></li>
-                <li><a href="admin/signin">admlogin</a></li>
+              <li><a href="/admin/loja">Loja</a></li>
+              <li><a href="add-carro">Adicionar carro</a></li>
+              <li><a href="/logout">Sair</a></li>
             </ul>
         </div>
     </header>
