--- a/Alugueis de Carros-MPA/views/admin/loja.ejs
+++ b/Alugueis de Carros-MPA/views/admin/loja.ejs
@@ -12,10 +12,9 @@
     <header class="header-topo">
         <div class="header-nav">
             <ul>
-                <li><a href="aluguel">admaalugar</a></li>
-                <li><a href="/admin/loja">admloja</a></li>
-                <li><button><a href="add-carro">add carro</a></button></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="aluguel">Alugueis</a></li>
+                <li><a href="add-carro">Adicionar carro</a></li>
+                <li><a href="/logout">Sair</a></li>
             </ul>
         </div>
     </header>
