--- a/Alugueis de Carros-MPA/views/loja/conta-editar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/conta-editar.ejs
@@ -32,7 +32,7 @@
     <form class="form-container" action="/loja/conta-editar" method="post">
         <h5>Edite seus dados</h5>
         Name: <input type="text" name="name" value="<%= user.name %>" required/><br />
-        Data de nascimento: <input type="date" value="<%= user.genero %>" name="dataNascimento"  required/><br />
+        Data de nascimento: <input type="date" value="<%= user.dataNascimento %>" name="dataNascimento"  required/><br />
         Genero: <select name="genero"  required> <br>
             <option name="feminino">feminino</option>
             <option name="masculino">masculino</option>
