--- a/Alugueis de Carros-MPA/views/loja/conta.ejs
+++ b/Alugueis de Carros-MPA/views/loja/conta.ejs
@@ -12,9 +12,8 @@
     <div class="header-topo">
         <nav class="header-nav">
             <ul>
-                <li> <a href="/aluguel"> Meus Alugueis</a></li>
-                <li> <a href="/loja"> Minha loja</a></li>
-                <li> <a href="/conta"> Minha conta</a></li>
+                <li> <a href="/loja/aluguel"> Meus Alugueis</a></li>
+                <li> <a href="/loja"> Loja</a></li>
             </ul>
         </nav>
     </div>
