--- a/Alugueis de Carros-MPA/views/loja/senha-editar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/senha-editar.ejs
@@ -11,7 +11,7 @@
     <script>
         function check(input) {
     if (input.value !== document.getElementById('new-password').value) {
-        input.setCustomValidity('As senhas não estão iguais');
+        input.setCustomValidity('Passwords must match');
     } else {
         input.setCustomValidity('');
     }
@@ -36,7 +36,5 @@
         <input type="submit" value="Salvar" /><br>
     </form>
 </body>
-
-
 
 </html>
