--- a/Alugueis de Carros-MPA/views/user/signup.ejs
+++ b/Alugueis de Carros-MPA/views/user/signup.ejs
@@ -40,7 +40,7 @@
         <input type="text" id="password" name="password" required>
 
         <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password"  required
+        <input type="password" id="confirm-password" name="confirm-password" required
             pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" oninput="check(this)" required>
         <p id="message"></p>
         <input type="submit" value="Save" /><br>
