--- a/Alugueis de Carros-MPA/views/admin/add-carro.ejs
+++ b/Alugueis de Carros-MPA/views/admin/add-carro.ejs
@@ -28,7 +28,7 @@
        cor: <input type="text" name="cor" id=""> <br>
        valor: <input type="number" name="valor"> <br>
        preço da diaria <input type="number" name="precoDiaria"> <br>
-       <input type="submit" value="Save" /><br>
+       <input type="submit" value="Salvar" /><br>
     </form>
 </body>
 </html>
