--- a/Alugueis de Carros-MPA/views/loja/senha-editar.ejs
+++ b/Alugueis de Carros-MPA/views/loja/senha-editar.ejs
@@ -11,7 +11,7 @@
     <script>
         function check(input) {
     if (input.value !== document.getElementById('new-password').value) {
-        input.setCustomValidity('Passwords must match');
+        input.setCustomValidity('As senhas não estão iguais');
     } else {
         input.setCustomValidity('');
     }
@@ -25,6 +25,9 @@
         
         <label for="oldpassword">Old Password:</label>
         <input type="text" id="password" name="oldpassword" required>
+        <% if (message) { %>
+            <p class="error" ><%= message %></p>
+          <% } %>
         <p>Senha com uma letra maiuscula, um numero, uma minuscula e 8 caracteres</p>
         <label for="password">Password:</label>
         <input type="text" id="new-password" name="password" required>
@@ -36,5 +39,7 @@
         <input type="submit" value="Salvar" /><br>
     </form>
 </body>
+
+
 
 </html>
