--- a/Alugueis de Carros-MPA/views/loja/aluguel.ejs
+++ b/Alugueis de Carros-MPA/views/loja/aluguel.ejs
@@ -15,7 +15,7 @@
         <nav class="header-nav">
             <ul>
                 <li> <a href="/loja/aluguel"> Meus Alugueis</a></li>
-                <li> <a href="/loja"> Minha loja</a></li>
+                <li> <a href="/loja"> Loja</a></li>
                 <li> <a href="/loja/conta"> Minha conta</a></li>
             </ul>
         </nav>
