--- a/Alugueis de Carros-MPA/views/user/signup.ejs
+++ b/Alugueis de Carros-MPA/views/user/signup.ejs
@@ -23,7 +23,7 @@
 
         <form class="form-container" action="/signup" method="post">
              <h5>CADASTRO USUÁRIO</h5>
-            Nome: <input type="text" name="name"  required/><br />
+            Nome Completo: <input type="text" name="name"  required/><br />
             Data de nascimento: <input type="date" name="dataNascimento"  required/><br />
             Gênero: <select name="genero"  required> <br>
                 <option name="feminino">feminino</option>
